<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.start.StartFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/app_margin"
        android:textSize="@dimen/app_large_text"
        />

    <Button
        android:id="@+id/btn_room"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:text="@string/start_btn_room"
        android:layout_margin="@dimen/app_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_firebase"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:text="@string/start_btn_firebase"
        android:layout_margin="@dimen/app_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_room" />

    <EditText
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:id="@+id/input_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_firebase"
        android:layout_margin="@dimen/app_margin"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:visibility="invisible"
        android:text="example@ex.ex"/>

    <EditText
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:id="@+id/input_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email"
        android:layout_margin="@dimen/app_margin"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:visibility="invisible"
        android:text="password"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:text="@string/start_btn_login"
        android:layout_margin="@dimen/app_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        android:visibility="invisible" />


</androidx.constraintlayout.widget.ConstraintLayout>